unpackaged/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EH-{00000000}</displayFormat>
        <label>Employment History	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>