unpackaged/main/default/objects/Employment_History__c/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Employer</label>
    <type>Checkbox</type>
</CustomField>