unpackaged/main/default/objects/Employment_History__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment History(Employer)</relationshipLabel>
    <relationshipName>Employment_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>