unpackaged/main/default/objects/Employment_History__c/fields/Employer_at_Time_of_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Employer_at_Time_of_Exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer at Time of Exposure</label>
    <type>Checkbox</type>
</CustomField>