unpackaged/main/default/objects/Employment_History__c/fields/Employment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_End_Date__c</fullName>
    <label>Employment End Date</label>
    <type>Date</type>
</CustomField>