unpackaged/main/default/objects/Employment_History__c/fields/Employment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_Start_Date__c</fullName>
    <label>Employment Start Date</label>
    <type>Date</type>
</CustomField>