unpackaged/main/default/objects/Employment_History__c/fields/Employment_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_Change_Date__c</fullName>
    <label>Employment Status Change Date</label>
    <type>Date</type>
</CustomField>