unpackaged/main/default/objects/Employment_History__c/fields/Job_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Job_Status_Change__c</fullName>
    <label>Job Status Change</label>
    <type>TextArea</type>
</CustomField>